--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.4"
   },
