--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
-    "framer-motion": "^12.9.2",
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.10.4",
+    "lucide-react": "^0.508.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.4"
   },
